<resources>
    <string name="app_name">Alura Viagens</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner Inicial dos Pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes">MM</string>
    <string name="ano">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_no_cartao">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="parabens">Parabéns!</string>
    <string name="compra_realizada">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo">Confira o resumo da compra:</string>
    <string name="banner_inicial">banner inicial</string>
</resources>