<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/pagamento_valorcompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView android:id="@+id/pagamento_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="R$ 421,50"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valorcompra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valorcompra" />

    <EditText android:id="@+id/pagamento_numerocartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_cartao"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco"
        android:importantForAutofill="no" />

    <EditText android:id="@+id/pagamento_mescartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvccartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_numerocartao"
        android:importantForAutofill="no" />

    <EditText android:id="@+id/pagamento_anocartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_mescartao"
        app:layout_constraintStart_toEndOf="@+id/pagamento_mescartao"
        android:importantForAutofill="no" />

    <EditText android:id="@+id/pagamento_cvccartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_numerocartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numerocartao"
        android:importantForAutofill="no" />

    <EditText android:id="@+id/pagamento_nomecartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:digits="@string/mascara_nome_cartao"
        android:hint="@string/nome_no_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvccartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mescartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvccartao"
        android:importantForAutofill="no" />

    <Button android:id="@+id/pagamento_finaliza"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/finalizar_compra"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nomecartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nomecartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nomecartao" />

</androidx.constraintlayout.widget.ConstraintLayout>